feat: add weekly market holiday selection
